--- a/tests/Directory.Data.Test/Directory.Data.Test.csproj
+++ b/tests/Directory.Data.Test/Directory.Data.Test.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
+    <Nullable>annotations</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
