Change status context name

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,13 +39,13 @@ pipeline{
             sh 'curl "https://api.GitHub.com/repos/DanJesensky/Directory-API/statuses/$GIT_COMMIT?access_token=$GITHUB_ACCESS_TOKEN" \
                 -H "Content-Type: application/json" \
                 -X POST \
-                -d "{\\"state\\": \\"success\\",\\"context\\": \\"continuous-integration/jenkins\\", \\"description\\": \\"Jenkins\\", \\"target_url\\": \\"https://ci.danjesensky.com/job/Directory%20API/$BUILD_NUMBER/console\\"}"'
+                -d "{\\"state\\": \\"success\\",\\"context\\": \\"Jenkins CI\\", \\"description\\": \\"Jenkins\\", \\"target_url\\": \\"https://ci.danjesensky.com/job/Directory%20API/$BUILD_NUMBER/console\\"}"'
         }
         failure{
             sh 'curl "https://api.GitHub.com/repos/DanJesensky/Directory-API/statuses/$GIT_COMMIT?access_token=$GITHUB_ACCESS_TOKEN" \
                 -H "Content-Type: application/json" \
                 -X POST \
-                -d "{\\"state\\": \\"failure\\",\\"context\\": \\"continuous-integration/jenkins\\", \\"description\\": \\"Jenkins\\", \\"target_url\\": \\"https://ci.danjesensky.com/job/Directory%20API/$BUILD_NUMBER/console\\"}"'
+                -d "{\\"state\\": \\"failure\\",\\"context\\": \\"Jenkins CI\\", \\"description\\": \\"Jenkins\\", \\"target_url\\": \\"https://ci.danjesensky.com/job/Directory%20API/$BUILD_NUMBER/console\\"}"'
         }
     }
 }
